--- a/style.css
+++ b/style.css
@@ -177,22 +177,20 @@ html, body {
 		width: 100%;
 		overflow: auto;
 	}
-	.section#s-1 { border-right: 4px double #444444; width: 50%;}
-	#s-1::-webkit-scrollbar-track
-	{
+	.section#s-1 { 
+		border-right: 4px double #444444; 
+		width: 50%;
+	}
+	.section#s-1::-webkit-scrollbar-track {
 		-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 		/* border-radius: 10px; */
 		background-color: #2e2c29;
 	}
-
-	#s-1::-webkit-scrollbar
-	{
+	.section#s-1::-webkit-scrollbar	{
 		width: 12px;
 		background-color: #2e2c29;
 	}
-
-	#s-1::-webkit-scrollbar-thumb
-	{
+	.section#s-1::-webkit-scrollbar-thumb {
 		border-radius: 3px;
 		-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
 		background-color: #4f4e4d;
@@ -226,13 +224,6 @@ html, body {
 		width: auto;
 	}
 
-	/* .drag-bar {
-		width: 5px;
-    	background-color: #706e6c;
-		cursor: e-resize;
-		flex-shrink: 0;
-		flex-grow: 0;
-	} */
 	.section#s-2 {
 		display: flex;
 		flex-direction: column;
