--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ html, body {
 		display: block;
 		height: 25px;
 		width: 25px;
+		line-height: 25px;
 		border-radius: 100%;
 		border: 1px solid #444444;
 		background-color: #444444;
